# q2-gatk

./: .flake8  .gitignore  README.md  pyproject.toml
q2_gatk/: __init__.py  _format.py  _gatk.py  _type.py  plugin_setup.py
