[tool.poetry]
name = "q2-gatk"
description = ""
version = "0.0.0"
authors = []
# packages = [{include = "q2_bowtie2"}]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
codespell = "^2.2.2"
flake8-docstrings = "^1.7.0"
pyright = "^1.1.293"
pytest-cov = "^4.0.0"
pytest-isort = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#This doesn't seem to work, I think it is a qiime issue though
[tool.poetry.plugins."qiime2.plugins"]
"q2-bowtie2" = "q2-bowtie2=q2_bowtie2.plugin_setup:plugin"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
